--- a/web/src/components/about/about.scss
+++ b/web/src/components/about/about.scss
@@ -3,3 +3,20 @@
   padding-bottom: 3rem;
   color: #415872 !important;
 }
+
+hr {
+  border: 1px solid;
+  border-radius: 1px;
+  width: 10%;
+  margin: 10px auto;
+}
+
+.number-of-users {
+  width: 80%;
+}
+
+@media screen and (max-width: 767px) {
+  .number-of-users {
+    width: 100%;
+  }
+}
