--- a/web/src/components/footer/footer.scss
+++ b/web/src/components/footer/footer.scss
@@ -2,3 +2,38 @@
   background-color: white;
   height: 1px;
 }
+
+.contact-header {
+  margin-top: 2rem;
+}
+
+.contact-header h3 {
+  color: white;
+}
+
+.footer-legal {
+  color: white;
+  font-size: 11px;
+  margin-top: 2rem;
+}
+
+a .fa {
+  color: white;
+  margin-right: 1rem;
+  font-size: 1.5rem;
+}
+
+a .fa:hover {
+  color: #a9a9a9;
+}
+
+.footer-logo {
+  height: 12.5rem;
+  width: 12.5rem;
+  margin: -10%;
+  opacity: 0.7;
+}
+
+.server-link-text {
+  color: #7289da;
+}
